# CVUIA

./: .gitignore  LEARNINGS.md  Makefile  PLAN.md  README.md  WIP.md
backend/: README.md  pyproject.toml  ruff.toml
backend/app/: __init__.py  capture.py  config.py  hand_tracker.py  main.py  overlays.py  schema.py  tremor.py
backend/tests/: test_tremor.py
frontend/: README.md  biome.json  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AdaptiveButton.tsx  NumberPad.tsx  SmoothTracker.tsx
frontend/src/context/: TremorContext.tsx
frontend/src/hooks/: useAdaptiveDebounce.ts  useEmaSmoothing.ts  useTremorSocket.ts
frontend/src/types/: tremor.ts
